# KalmanPaper

./: .gitignore  analysisnote.html  analysisnote.html.md  common.html  common.html.md  core.html  core.html.md  funcs.html  funcs.html.md  index.html  index.html.md  listings.json  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml  template.html  template.html.md
AnalysisStorage/: analysis.html  analysis.html.md  analysis00.html  analysis00.html.md  analysis01.html  analysis01.html.md  analysis02.html  analysis02.html.md  index.html  index.md
EKF/: ekf.html  ekf.html.md  index.html  index.md  summary.html  summary.html.md
Exp/: comp.html  comp.html.md  exp.html  exp.html.md  expfunc.html  expfunc.html.md  index.html  index.md  keybatch.html  keybatch.html.md
KalmanPaper/: Comp.py  EKF.py  Exper.py  KeyBatch.py  VA.py  _modidx.py  core.py  gen.py  gen00.py  simple.py  wEXP_PVA.py
KalmanPaper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
MinimizeRegrex/: index.html  index.md  summary.html  summary.html.md
VA/: index.html  index.md  summary.html  summary.html.md  va.html  va.html.md
_proc/: 00_core.html.md  00_template copy.html.md  00_template copy.ipynb  00_template.html.md  00_template.ipynb  01_funcs.html.md  01_funcs.ipynb  01_test2.html.md  01_test2.ipynb  index.ipynb  nbdev.yml  sidebar.yml
_proc/_docs/: core.html  funcs.html  funcs.html.md  index.html  index.html.md  search.json  sitemap.xml  template copy.html  template.html  template.html.md  test2.html  test2.html.md
nbs/: 00_template.ipynb  01_funcs.ipynb  02_common.ipynb  03_AnalysisNote.ipynb  _quarto.yml  index.ipynb  mathjax-config.html  sidebar.yml
nbs/AnalysisStorage/: 00_Analysis.ipynb  00_Analysis00.ipynb  01_Analysis.ipynb  01_Analysis01.ipynb  02_Analysis02.ipynb  data.csv  index.qmd
nbs/EKF/: 00_EKF.ipynb  00_summary.ipynb  01_EKF.ipynb  index.qmd
nbs/Exp/: 00_Exp.ipynb  01_Comp.ipynb  02_keybatch.ipynb  03_expfunc.ipynb  index.qmd
nbs/MinimizeRegrex/: 00_summary.ipynb  index.qmd
nbs/VA/: 00_VA.ipynb  00_summary.ipynb  01_VA.ipynb  index.qmd
nbs/wEXP_PVA/: 00_wEXP_PVA.ipynb  index.qmd
wEXP_PVA/: index.html  index.md  wexp_pva.html  wexp_pva.html.md
