[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "KalmanPaper"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "SuzuSys", email = "sigmatics@outlook.jp"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['setuptools', 'matplotlib', 'numpy', 'jax', 'jaxtyping', 'pandas', 'h5py', 'plotly', 'nbformat', 'dash', 'nbclient']

[project.urls]
Repository = "https://github.com/SuzuSys/KalmanPaper"
Documentation = "https://SuzuSys.github.io/KalmanPaper"

[project.entry-points.nbdev]
KalmanPaper = "KalmanPaper._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "KalmanPaper.__version__"}

[tool.setuptools.packages.find]
include = ["KalmanPaper"]

[tool.nbdev]
custom_sidebar = true
