[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "KalmanPaper"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "SuzuSys", email = "sigmatics@outlook.jp"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "jax>=0.4.30",
    "jaxtyping>=0.2.36",
    "pandas>=2.3.3",
    "h5py>=3.14.0",
    "plotly>=6.5.2",
    "nbformat>=5.10.4",
    "dash>=4.0.0",
    "nbclient>=0.10.2",
]

[project.urls]
Repository = "https://github.com/SuzuSys/KalmanPaper"
Documentation = "https://SuzuSys.github.io/KalmanPaper"

[project.entry-points.nbdev]
KalmanPaper = "KalmanPaper._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "KalmanPaper.__version__"}

[tool.setuptools.packages.find]
include = ["KalmanPaper"]

[tool.nbdev]
custom_sidebar = true

[dependency-groups]
dev = [
    "nbdev>=2.4.6",
]
